--- a/src/index.css
+++ b/src/index.css
@@ -12,37 +12,8 @@ code {
     monospace;
 }
 
-.div{
-  margin-left: auto;
-    margin-right: auto;
-    width: 6em
+.active {
+  color: darkblue;
+  font-weight: bold;
 }
 
-.error{
-  color: red;
-}
-
-.input {
-  background-color: #303245;
-  border-radius: 12px;
-  border: 0;
-  box-sizing: border-box;
-  color: #eee;
-  font-size: 18px;
-  height: 100%;
-  outline: 0;
-  padding: 4px 20px 0;
-  width: auto;
-}
-
-.button {
-  background-color: #A68A00; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-top: 25px;
-}
